--- a/src/app/view/alunos/tabela-aluno/table-listar-aluno.component.html
+++ b/src/app/view/alunos/tabela-aluno/table-listar-aluno.component.html
@@ -14,10 +14,10 @@
     </ng-template>
 </table-x>
 
-<div *ngIf="alunoDelete!=null && displayAlunoDelete" class="block-back-wrap modal-type">
-        <p-dialog header="Confirmar ação" [(visible)]="displayAlunoDelete" [modal]="true" [blockScroll]="true" [closeOnEscape]="true">
+<div *ngIf="alunoDelete!=null && displayDelete" class="block-back-wrap modal-type">
+        <p-dialog header="Confirmar ação" [(visible)]="displayDelete" [modal]="true" [blockScroll]="true" [closeOnEscape]="true">
             <div class="dialog-message">
-                Quer mesmo deletar a Observação?
+                Quer mesmo deletar o Aluno?
             </div>
     
             <div class="ui-g corpo-modal-confirmacao">
@@ -30,14 +30,14 @@
                     <label>{{alunoDelete.matricula}} </label>
                 </div>
                 <div class="ui-g-12">
-                    <label>Observação:</label>
+                    <label>Turma:</label>
                     <label>{{alunoDelete.turma.codigo}}</label>
                 </div>
             </div>
     
             <p-footer>
                 <button class="ui-button-success" icon="fa fa-check" type="button" label="Sim" pButton (click)="deleteAluno();"></button>
-                <button class="ui-button-danger" icon="fas fa-times" type="button" label="Não" pButton (click)="displayAlunoDelete=false"></button>
+                <button class="ui-button-danger" icon="fas fa-times" type="button" label="Não" pButton (click)="displayDelete=false"></button>
             </p-footer>
         </p-dialog>
     </div>
