--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -19,21 +19,20 @@
                     Aluno
                 </span>
             </a>
-
+        </li>
+        <li class="has-subnav">
+            <a (click)="abrirMenu('turma')">
+                <i class="fas fa-users fa-2x"></i>
+                <span class="nav-text">
+                    Turma
+                </span>
+            </a>
         </li>
         <li class="has-subnav">
             <a (click)="abrirMenu('professor')">
                 <i class="fas fa-chalkboard-teacher fa-2x"></i>
                 <span class="nav-text">
                     Professor
-                </span>
-            </a>
-        </li>
-        <li class="has-subnav">
-            <a>
-                <i class="fas fa-users fa-2x"></i>
-                <span class="nav-text">
-                    Turma
                 </span>
             </a>
         </li>
@@ -51,8 +50,9 @@
     <p-breadcrumb [home]="home" [model]="breadCrumbItems"></p-breadcrumb>
     <div *ngIf="selected['aluno']" class="ui-lg-12">
         <menu-aluno #menuAluno [(loading)]="loading" (bread)="adicionaBread($event)"></menu-aluno>
-            <!-- <table-listar-aluno [loading]="loading" (breadCrumb)="adicionaBread($event)"></table-listar-aluno>
-            <formulario-adiciona-aluno [loading]="loading"></formulario-adiciona-aluno> -->
+    </div>
+    <div *ngIf="selected['turma']" class="ui-lg-12">
+        <menu-turma #menuTurma [(loading)]="loading" (bread)="adicionaBread($event)"></menu-turma>
     </div>
     <div *ngIf="selected['professor']" class="ui-lg-12">
         <menu-professor #menuProfessor [(loading)]="loading" (bread)="adicionaBread($event)"></menu-professor>
