cadastrar nota em disciplina da turma

--- a/src/app/view/turma/menu-turma.component.html
+++ b/src/app/view/turma/menu-turma.component.html
@@ -2,7 +2,8 @@
     <div class="ui-lg-4 ui-md-4">
         <p-card title="Cadastro" [style]="{width: '100%'}" [styleClass]="">
             <ul style="list-style-type:square">
-                <li><a (click)="exibir('formulario')">Adicionar Turma</a></li>
+                <li><a (click)="exibir('formulario')">Criar Nova Turma</a></li>
+                <li><a (click)="exibir('nota')">Inserir Nota em Disciplina</a></li>
             </ul>
         </p-card>
     </div>
