--- a/src/app/view/turma/formulario-adiciona-turma/formulario-adiciona-turma.component.html
+++ b/src/app/view/turma/formulario-adiciona-turma/formulario-adiciona-turma.component.html
@@ -109,7 +109,7 @@
                         targetFilterPlaceholder="Buscar Professor" 
                         [sourceStyle]="{'height':'300px'}"
                         [targetStyle]="{'height':'300px'}">
-
+            </p-pickList>
         </div>
     </div>
 </p-panel>
