--- a/src/app/view/alunos/formulario-adiciona-aluno/formulario-adiciona-aluno.component.html
+++ b/src/app/view/alunos/formulario-adiciona-aluno/formulario-adiciona-aluno.component.html
@@ -149,7 +149,7 @@
         [toggleable]="true" 
         [style]="{'margin-bottom':'20px', 'width':'100%'}"
         [collapsed]="true">
-        <div class="ui-g">
+        <div class="ui-g form-group">
                 <div class="ui-lg-4 ui-md-6">
                         <label>Curso:</label>
                         <p-autoComplete [(ngModel)]="element.curso" 
@@ -192,6 +192,7 @@
                         <p-autoComplete [(ngModel)]="element.situacao" 
                                         [suggestions]="situacaoSuggestions" 
                                         (completeMethod)="buscarDropdown($event, 'situação')"
+                                        (onSelect)="onSelect('situação')" 
                                         [style]="{'width':'100%'}"
                                         minLength="1"
                                         [forceSelection]="true"
@@ -233,6 +234,7 @@
                                         [emptyMessage]="'Não foram encontrados resultados'"
                                         [inputStyle]="{'width':'calc(100% - 2em)'}"
                                         field="codigo"
+                                        [styleClass]="isCampoInvalido('turma')?'invalidField':''"
                                         [dropdown]="true"></p-autoComplete>
                 </div>
                 <div class="ui-lg-4 ui-md-6">
@@ -294,7 +296,7 @@
         <div class="ui-g" style="padding-right:10em">
                 <ng-container *ngFor="let d of disciplinas">
                         <div class="ui-lg-3 ui-md-3" style="text-align:right">
-                                <label>{{d.nome}}</label>
+                                <label style="width:80%">{{d.nome}}</label>
                                 <input type="text" 
 
                                         pInputText 
