--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -37,7 +37,7 @@
             </a>
         </li>
         <li class="has-subnav">
-            <a>
+            <a (click)="abrirMenu('configuracao')">
                 <i class="fas fa-cog fa-2x"></i>
                 <span class="nav-text">
                     Configurações
@@ -66,7 +66,7 @@
         <menu-professor #menuProfessor [(loading)]="loading" (bread)="adicionaBread($event)"></menu-professor>
     </div>
     <div *ngIf="selected['configuracao']" class="ui-lg-12">
-        <configuracao-component [(loading)]="loading" (bread)="adicionaBread($event)"></configuracao-component>
+        <configuracao-component #menuconfiguracao [(loading)]="loading" (bread)="adicionaBread($event)"></configuracao-component>
     </div>
 </div>
 
